# travel_agency_backend

./: .dockerignore  .env.example  .env.example.docker  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 58f6e65eb66d_init_model.py
src/travel_agency_backend/: main.py
src/travel_agency_backend/api/: admin_routes.py  auth_routes.py  booking_routes.py  middleware.py
src/travel_agency_backend/api/admin/: admin_bookings_routes.py  admin_departures_routes.py  admin_trips_routes.py  admin_users_routes.py
src/travel_agency_backend/api/public/: public_departures_routes.py  public_trips_routes.py
src/travel_agency_backend/api/unprotected/: unprotected_departures_routes.py  (+1 more)
src/travel_agency_backend/config/: logging.py  settings.py
src/travel_agency_backend/db/: session.py
src/travel_agency_backend/models/: __init__.py  booking_model.py  departure_model.py  trip_model.py
src/travel_agency_backend/models.py/: booking_model.py  user_model.py
src/travel_agency_backend/schemas/: booking_schemas.py  departure_schemas.py  token_schema.py  trip_schemas.py  user_schemas.py
src/travel_agency_backend/services/: auth_services.py  booking_services.py  departure_services.py  trip_services.py  user_services.py
src/travel_agency_backend/utils/: enums.py  exceptions.py  scheduler.py  security.py
tests/: conftest.py  test_admin_bookings.py  test_admin_departures.py  test_admin_trips.py  test_admin_users.py  test_auth.py  test_bookings.py  test_public_routes.py  test_unprotected_routes.py
