[project]
name = "travel-agency-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Aladrovic",email = "oliver.aladrovic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "python-slugify (>=8.0.4,<9.0.0)",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry]
packages = [{include = "travel_agency_backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
